# Modern-C-for-Image-Processing

./: README.md
Assignments/HW1/Solution/: game  problem1.sh  problem2.cpp
Assignments/HW2/Solution/igg_image/data/: lenaDown.ascii.pgm  lenaUp.ascii.pgm
Assignments/HW2/Solution/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
Assignments/HW2/Solution/igg_image/tests/: CMakeLists.txt  test.cpp
Assignments/HW3/Solution/igg_image/: CMakeLists.txt
Assignments/HW3/Solution/igg_image/data/: pbmlib_Write.ascii.ppm
Assignments/HW3/Solution/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
Assignments/HW3/Solution/igg_image/src/igg_image/io_strategies/: CMakeLists.txt
Assignments/HW3/Solution/igg_image/tests/: CMakeLists.txt  test_dummy_strategy.cpp  test_from_png.cpp  test_from_ppm.cpp  test_init.cpp  test_resize.cpp
Assignments/HW4/Solution/homework_4/digit_counter/: CMakeLists.txt
Assignments/HW4/Solution/homework_4/digit_counter/src/: digit_counting.cpp
Assignments/HW4/Solution/homework_4/digit_counter/tests/: CMakeLists.txt  test_sig_figs.cpp  test_warp.cpp
Assignments/HW4/Solution/homework_4/igg_image/: CMakeLists.txt
Assignments/HW4/Solution/homework_4/igg_image/data/: pbmlibTest.ascii.ppm  pbmlib_Down.ascii.ppm
Assignments/HW4/Solution/homework_4/igg_image/src/igg_image/: image.cpp  image.h  (+1 more)
Assignments/HW4/Solution/homework_4/igg_image/tests/: CMakeLists.txt  test_init.cpp  test_no_strategy.cpp  test_png.cpp  test_ppm.cpp
Assignments/HW4/Solution/homework_4/stack_limit/: stack_limit  stack_limit.cpp
(+2 files in other folders)
